<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:plainpie="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="thiengo.com.br.brasil_pibestados.PIBActivity" />
        <!-- import type="thiengo.com.br.brasil_pibestados.util.SpinnerWithListener" />

        <variable name="itemSelectedListener" type="SpinnerWithListener" / -->
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@android:color/white"
            tools:context=".PIBActivity">

        <!--
            Hackcode o uso de um RelativeLayout somente para conter
            o padding interno que deveria vir no ScrollView, porém
            se adicionado o padding no ScrollView parte do conteúdo
            ficará abaixo da barra de fundo para navegação.
        -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="16dp"
                    android:background="@drawable/content_background">

                <TextView
                        android:id="@+id/tv_pib_label"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/label_pib"/>

                <thiengo.com.br.brasil_pibestados.util.SpinnerWithListener
                        android:onItemSelected="@{ (PIBActivity) context }"
                        android:id="@+id/sp_states"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:layout_toRightOf="@+id/tv_pib_label"
                        android:layout_toEndOf="@+id/tv_pib_label"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:entries="@array/states"
                        android:background="@drawable/spinner_background"
                        android:popupBackground="@android:color/white"
                        android:theme="@style/AppTheme.SpinnerTheme"/>

                <View
                        android:id="@+id/v_vertical_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.6dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_below="@+id/sp_states"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorLine"/>

                <TextView
                        android:id="@+id/tv_pib_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/v_vertical_line"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="R$ 1.939,890 trilhão (ano de 2015)"/>

                <az.plainpie.PieView
                        android:id="@+id/pv_pib"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="16dp"
                        android:layout_below="@+id/tv_pib_state"
                        android:layout_centerHorizontal="true"
                        plainpie:inner_pie_padding="30"
                        plainpie:inner_text_visibility="true"/>

                <RelativeLayout
                        android:id="@+id/rl_population"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@+id/pv_pib"
                        android:padding="16dp"
                        android:background="@color/colorBlockPopulation">

                    <TextView
                            android:id="@+id/tv_population_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_population"/>

                    <TextView
                            android:id="@+id/tv_population_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_population_label"
                            android:layout_toEndOf="@+id/tv_population_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="45.538.936 habitantes"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_population"
                        android:padding="16dp"
                        android:background="@color/colorBlockArea">

                    <TextView
                            android:id="@+id/tv_area_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_area"/>

                    <TextView
                            android:id="@+id/tv_area_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_area_label"
                            android:layout_toEndOf="@+id/tv_area_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="248.222,362"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_idh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_area"
                        android:padding="16dp"
                        android:background="@color/colorBlockIdh">

                    <TextView
                            android:id="@+id/tv_idh_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_idh"/>

                    <TextView
                            android:id="@+id/tv_idh_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_idh_label"
                            android:layout_toEndOf="@+id/tv_idh_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="0,783"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_per_capita_income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_idh"
                        android:padding="16dp"
                        android:background="@color/colorBlockPerCapitaIncome">

                    <TextView
                            android:id="@+id/tv_per_capita_income_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_per_capita_income"/>

                    <TextView
                            android:id="@+id/tv_per_capita_income_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_per_capita_income_label"
                            android:layout_toEndOf="@+id/tv_per_capita_income_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="R$ 43,694"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_illiteracy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_per_capita_income"
                        android:padding="16dp"
                        android:background="@color/colorBlockIlliteracy">

                    <TextView
                            android:id="@+id/tv_illiteracy_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_illiteracy"/>

                    <TextView
                            android:id="@+id/tv_illiteracy_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_illiteracy_label"
                            android:layout_toEndOf="@+id/tv_illiteracy_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="2,6%"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_life_expectancy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:layout_below="@+id/rl_illiteracy"
                        android:background="@drawable/last_content_item_background">

                    <TextView
                            android:id="@+id/tv_life_expectancy_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:text="@string/label_life_expectancy"/>

                    <TextView
                            android:id="@+id/tv_life_expectancy_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tv_life_expectancy_label"
                            android:layout_toEndOf="@+id/tv_life_expectancy_label"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="end"
                            android:text="78,1"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>